Added 	jvmArgs("-XX:+EnableDynamicAgentLoading")